--- a/application.yml
+++ b/application.yml
@@ -1,12 +1,31 @@
+
+server:
+  port: 9000
 spring:
-  kafka:
-    bootstrap-servers: localhost:9092
-    consumer:
-      group-id: "midas-consumer-group"
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+   kafka:
+     consumer:
+        bootstrap-servers: localhost:9092
+        group-id: "midas-consumer-group"
+        auto-offset-reset: earliest
+   datasource:
+    url: jdbc:h2:mem:testdb
+    # url: jdbc:h2:file:/data/demo   or save data to a file
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: pass
+   h2:
+    console:
+      enabled: true
+   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+        # key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+        # value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    #  producer:
+    #     bootstrap-servers: localhost:9092
+    #     key-serializer: org.apache.kafka.common.serialization.StringSerializer
+    #     value-serializer: org.apache.kafka.common.serialization.StringSerializer
 general:
-  kafka-topic: your-topic-name
+  kafka-topic: transaction-topic
+
 
 
