--- a/application.yml
+++ b/application.yml
@@ -16,6 +16,7 @@ spring:
    h2:
     console:
       enabled: true
+      path: /h2-console
    jpa:
     database-platform: org.hibernate.dialect.H2Dialect
         # key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
